--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *swp
 .DS*
 ._*
-.ipynb_checkpoints
-.pyc
-.log
-.fls
-.fdb_latexmk
-.aux
+*.ipynb_checkpoints
+*.pyc
+*.log
+*.fls
+*.fdb_latexmk
+*.aux
